--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ venv.bak/
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project settingsreduce redundancy
 .ropeproject
 
 # mkdocs documentation
@@ -142,3 +142,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+*.mat
